Researched OOCSS, SMACSS, and BEM, in an attempt to tidy up my styling. I am finding it difficult to manage CSS even in a small application like Guessing Game. When done correctly CSS can be a beautiful thing, but done incorrectly and it feels like an insurmountable beast. Also researched use cases for REM, and EM. I was finding it difficult to manage what font-size and padding was being calculated across screens.
With this commit, I refactured CSS styling for the nav and title modules.
I am not fully content with my styling right now for Guessing Game but I feel I am putting too much time
into a project like Guessing Game.

Going forward I will be completing Guesing Game logically:
Finishing up database integration. Already connecting to DB must add:
  Creation of Document when first guess is entered.
  Completion of a Game.
  Adding to the guesses array when user enter a guess.
I may add other features but I really want to move on from this Guessing Game.
I could really add a lot more stuff if I put the time in, but if I am going to put the time in
I want it to be towards more fun projects. Although one could say more 'fun' projects could mean
more complex. Which would make it harder to add some of these new technologies/ideas that I am playing with.
Guessing Game is a great app to try things because of low complexity but not that rewarding.
There are trade offs going both ways. I think ultimately I just want to create more things.
I also want to learn some React soon too. EJS has just been a part of the journey more so than a tool
I plan on focusing on.
* Features I want to complete before hanging up this iteration of Guessing Game:
Adding the History page
Adding the detail view for Games

Next iterations of Guessing Game I will be keeping far less complex. I want to be done with
Guessing Game soon.
I believe the next iteration will just be swapping out EJS for PUG. PUG

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -17,7 +17,7 @@
 }
 
 #section-nav ul li {
-  font-size: 3rem;
+  font-size: 2em;
   font-weight: 800;
   color: var(--red);
   padding: 10px 0;
@@ -28,7 +28,7 @@
   border-radius: 20px;
 }
 h2 {
-  font-size: 3.5rem;
+  font-size: 2.2em;
 }
 .links a {
   text-decoration: none;
@@ -36,7 +36,7 @@ h2 {
   font-weight: 700;
   text-align: center;
   justify-self: center;
-  font-size: 2.5rem;
+  font-size: 2.5em;
   padding: 10px;
   background-color: #8d8c8c;
   border-radius: 20px;
