--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -111,70 +111,67 @@ body {
   line-height: 1.7;
 }
 
-.nav-container {
-  background-color: hsla(0, 0%, 60%, 1);
+ul {
+  list-style-type: none;
 }
 
-#main-navigation {
+/*
+  === nav module styles ===
+*/
+.nav {
+  background-color: hsla(0, 0%, 60%, 1);
   box-shadow: 0 2px 5px 0 rgba(44, 44, 44, 0.16),
     0 2px 10px 0 rgba(51, 51, 51, 0.12);
+  font-size: 1.2rem;
 }
-#main-navigation label {
+
+.nav__label {
   display: inline-block;
   color: var(--black);
   font-style: normal;
   font-size: 2em;
   padding: 10px 20px;
-  width: min-content;
   justify-self: flex-start;
 }
-ul {
-  list-style-type: none;
-}
-#main-navigation ul {
+
+.nav__ul {
   display: none;
-  min-width: 100vw;
   text-align: center;
   border-top: 3px hsla(0, 0%, 20%, 1) solid;
   background-color: var(--black);
+  font-size: 1.75em;
 }
 
-#hamburger {
-  justify-self: flex-end;
-}
-
-#main-navigation input[type='checkbox'] {
+.nav > input[type='checkbox'] {
   display: none;
 }
 
-#main-navigation input:checked ~ ul {
+.nav > input:checked ~ ul {
   display: block;
 }
-#main-navigation ul li {
+
+.nav__ul > li,
+.nav__ul > li > a {
   display: block;
   box-sizing: border-box;
   border-bottom: 3px hsla(0, 0%, 20%, 1) solid;
-  font-size: 2em;
-}
-
-#main-navigation ul li a {
   text-decoration: none;
-  display: block;
 }
-
-.titlebar-container {
+/* 
+  === title module styles ===
+ */
+.title {
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
   min-height: 60px;
 }
-.titlebar-container .title {
+.title > h1 {
   text-align: center;
   width: 80vw;
   line-height: 1.3;
   transform: skew(10deg);
-  max-width: 1352px;
   font-weight: 700;
   hyphens: auto;
   white-space: pre;
@@ -183,9 +180,6 @@ ul {
 .content-layout {
   display: grid;
   box-sizing: border-box;
-  margin: 0 auto;
-  max-width: 1400px;
-  /* grid-template-columns: 100%; */
   grid-template-areas: 'main';
 }
 
@@ -236,6 +230,7 @@ button {
   color: hsla(0, 100%, 100%, 1);
   text-decoration: none;
 }
+
 button,
 input {
   padding: 1.75em 1.5em;
